--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0"
   },
+  "engines": {
+    "node": "= 16.x"
+  },
   "devDependencies": {
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
